--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css?{{ cache_id }}">
     <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}">
     <link rel="icon" href="../static/images/icon.png" />
-    <title>HBnB0</title>
+    <!-- Import Jquery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js?{{ cache_id }}"></script>
+    <!-- Import Javascript file from: static/scripts/1-hbnb.js -->
+    <script src="../static/scripts/1-hbnb.js?{{ cache_id }}"></script>
+    <title>HBnB1</title>
   </head>
   <body>
     <header>
@@ -40,7 +44,7 @@
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li>{{ amenity.name }}</li>
+	      <li><input type="checkbox" style="margin-right: 10px" data-id="{{amenity.id}}" data-name="{{amenity.name}}">{{ amenity.name }}</li>
 	      {% endfor %}
 	    </ul>
 	  </div>
