--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css?{{ cache_id }}">
     <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}">
     <link rel="icon" href="../static/images/icon.png" />
-    <title>HBnB0</title>
+    <!-- Import Jquery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js?{{ cache_id }}"></script>
+    <!-- Import Javascript file from: static/scripts/1-hbnb.js -->
+    <script src="../static/scripts/2-hbnb.js?{{ cache_id }}"></script>
+    <title>HBnB2</title>
   </head>
   <body>
     <header>
       <div class="logo"></div>
+       <div id="api_status" class="hes" > </div>
     </header>
     <div class="container">
       <section class="filters">
@@ -40,7 +45,7 @@
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li>{{ amenity.name }}</li>
+	      <li><input type="checkbox" style="margin-right: 10px" data-id="{{amenity.id}}" data-name="{{amenity.name}}">{{ amenity.name }}</li>
 	      {% endfor %}
 	    </ul>
 	  </div>
